<resources>
    <string name="app_name">Imperator Of Dwelling</string>
    <string name="sign_in">Вход</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="or">или</string>
    <string name="forgot_your_password">Забыли пароль?</string>
    <string name="don_t_have_an_account">У меня нет аккаунта</string>
    <string name="sign_up_line">Регистрация</string>
    <string name="enter_via_x">Вход через X</string>
    <string name="enter_via_google">Вход через Google</string>
    <string name="name">Имя</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="i_read_and_agree_to_terms_and_conditions">I read and agree to Terms and Conditions</string>
    <string name="i_reed_and_agree_to">"I reed and agree to "</string>
    <string name="terms_and_conditions">"Terms and Conditions"</string>
    <string name="already_have_an_account">Уже есть аккаунт</string>
    <string name="sign_up">Регистрация</string>
    <string name="password_error">Пароль слишком короткий</string>
    <string name="email_is_incorrect">Email введен неверно</string>
    <string name="username_is_too_short">Имя слишком короткое</string>
    <string name="username_can_only_contain_letters_and_numbers">Имя может содержать только буквы и цифры</string>
    <string name="the_passwords_do_not_match">Пароли не совпадают</string>
    <string name="please_confirm_the_policy">Please confirm the policy</string>
    <string name="example_city">Москва</string>
    <string name="selected_city">Выбранный город</string>
    <string name="location_label">Метка на карте</string>
    <string name="enter_the_city_name">Выберите город</string>
    <string name="location">Локация</string>
    <string name="type_of_dwelling_you_need">Тип жилья</string>
    <string name="dates">Даты</string>
    <string name="apply">Принять</string>
    <string name="your_recent_search">Недавний поиск</string>
    <string name="recent">Недавние</string>
    <string name="nearby">Рядом</string>
    <string name="featured">Featured</string>
    <string name="clear_all">Очистить все</string>
    <string name="see_all">Смотреть все</string>
    <string name="count_residents">%1$s жильцов</string>
    <string name="residents">Жильцы</string>
    <string name="example_recent_search">Дома в Moscow</string>
    <string name="example_date">Fri, 16 Aug - Sun, 18 Aug</string>
    <string name="exmple_cost">$120/night</string>
    <string name="example_name_hotel">Hotel Moonlight</string>
    <string name="example_address">st. Star, 12</string>
    <string name="example_mark">4.5</string>
    <string name="aparts">Квартира</string>
    <string name="apartment">Квартира</string>
    <string name="button_back">Назад</string>
    <string name="hotel">Отель</string>
    <string name="anywhere">Где угодно</string>
    <string name="house">Дом</string>
    <string name="type_of_dwelling">Тип жилья</string>
    <string name="number_of_residents">Количество гостей</string>
    <string name="rooms">Комнат</string>
    <string name="adults">Взрослые</string>
    <string name="children">Дети</string>
    <string name="babies">Малыши</string>
    <string name="pets">Животные</string>
    <string name="home">Home</string>
    <string name="favorites">Избранное</string>
    <string name="my_favorites">My Favorites</string>
    <string name="options">варианта</string>
    <string name="your_favorites_list_is">Ваш список избранных</string>
    <string name="your_favorites_list_is_empty">Ваш список избранных пуст</string>
    <string name="empty">Пуст</string>
    <string name="your_top_picks_will_be_shown_here">Your top picks will be shown here</string>
    <string name="let_s_search">Искать</string>
    <string name="manage_group">Настроить группу</string>
    <string name="close_the_modal_bottom_sheet">close the modal bottom sheet</string>
    <string name="rename">Переименовать</string>
    <string name="remove_from_the_list">Удалить из списка</string>
    <string name="incorrect_email_or_password">Неправильный логин или пароль</string>
    <string name="amenities">Преимущества</string>
    <string name="see_details">Смотреть детали</string>
    <string name="rooms_amenity">комнаты</string>
    <string name="beds_amenity">кровати</string>
    <string name="wi_fi_amenity">High-speed Wi-fi</string>
    <string name="home_light_control_amenity">Home light control</string>
    <string name="smart_doors_amenity">Smart door locks</string>
    <string name="voice_assistant_amenity">Голосовой ассистент</string>
    <string name="touch_control_panels_amenity">Touch control panels</string>
    <string name="see_more">Смотреть больше</string>
    <string name="description">Описание</string>
    <string name="hide">Спрятать</string>
    <string name="hotel_chain">Hotel chain</string>
    <string name="rating">Рейтинг</string>
    <string name="manufacturability">Технологичность</string>
    <string name="photo_accuracy">Точность фотографий</string>
    <string name="comfort">Комфорт</string>
    <string name="view_all_reviews">Смотреть все отзывы</string>
    <string name="check_in">Заезд:</string>
    <string name="please_read_rules">Please read the host\'s conditions to avoid any issues during check-in</string>
    <string name="owner_s_rule">Owner\'s rule</string>
    <string name="check_out">Выезд:</string>
    <string name="cancellation_policy">Политика отмены</string>
    <string name="free_cancellation_is_available">Free cancellation is available if you cancel at least 7 days before check-in</string>
    <string name="please_review_the_cancellation_policy">Please, review the cancellation policy to avoid any issues when canceling your booking</string>
    <string name="beds">" кровати"</string>
    <string name="profile">Профиль</string>
    <string name="house_server_name" translatable="false">house</string>
    <string name="apartment_server_name" translatable="false">apartment</string>
    <string name="hotel_server_name" translatable="false">hotel</string>
    <string name="edit_profile">Изменить профиль</string>
    <string name="settings">Настройки</string>
    <string name="notifications">Уведомления</string>
    <string name="payment_method">Методы оплаты</string>
    <string name="help_and_support">Помощь и поддержка</string>
    <string name="about_us">О нас</string>
    <string name="frequently_asked_questions_faq">Часто задаваемые вопросы (FAQ)</string>
    <string name="contact_details">Contact details</string>
    <string name="live_chat">Live chat</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="company_information">Company Information</string>
    <string name="our_mission_and_values">Our Mission and Values</string>
    <string name="list_your_property">List your property</string>
    <string name="log_out">Выйти</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="phone_number">Номер телефона</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="where_i_live">Where i live</string>
    <string name="date_is_incorrect">Дата некоректна</string>
    <string name="edit">Изменить</string>
    <string name="gender">Пол</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="number_is_incorrect">Номер не корректен</string>
    <string name="language">Язык</string>
    <string name="go_to_registration">Перейти к регистрации</string>
    <string name="no_sign_up">Не регистрироваться</string>
    <string name="to_access_application_features">Для доступа ко всему приложению</string>
    <string name="payment_method_title">Payment Method</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="what_kind_of_pet">What kind of pet</string>
    <string name="you_are_booking_for">Вы бронируете на</string>
    <string name="i_m_flexible">У меня гибкий график</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>
    <string name="cancel_the_selection">Отменить выбор</string>
    <string name="save">Сохранить</string>
    <string name="send_aparts_content">
    "Check out this listing on Imperator Of Dwelling %1$s\n\nListing: %2$s\nAddress: %3$s\nNumber of rooms: %4$s\nFloor: %5$s\nPrice: %6$s\n\nPhoto: %7$s\n"
    </string>
    <string name="all_reviews">Все отзывы</string>
    <string name="search_by_keywords">Поиск по словам</string>
    <string name="reviews">Отзывы</string>
    <string name="filter">Фильтрация</string>
    <string name="reset_all">Сбросить все</string>
    <string name="type_of_accommodation">Тип</string>
    <string name="number_of_rooms">Количество комнат</string>
    <string name="price_range">Диапазон цен</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="network_error">Ошибка сети</string>
    <string name="there_is_no_internet">There is no internet</string>
    <string name="turn_on_the_internet_to_continue">Turn on the internet to continue</string>
    <string name="using_the_app">using the app</string>
    <string name="try_again">Попробовать снова</string>
    <string name="logo">logo</string>
    <string name="my_objects">My Objects</string>
    <string name="messages">Чаты</string>
    <string name="please_login_to_start_using_our_property_rental_app">Пожалуйста войдите в аккаунт</string>
    <string name="reserved">Бронь</string>
    <string name="calendar">calendar</string>
    <string name="notification">notification</string>
    <string name="add_stay">add stay</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="hello">Hello</string>
    <string name="creating_an_advert">Creating an advert</string>
    <string name="it_s_easy_to_get_started_on_imperator_of_dwelling">It`s easy to get\nStarted on Imperator of Dwelling</string>
    <string name="get_started">Get started</string>
    <string name="step">Step %1$s</string>
    <string name="title_of_the_advert_header">Title of the advert header</string>
    <string name="obligatory_field">Obligatory field</string>
    <string name="what_you_ll_be_handing_in">What you\'ll be handing in</string>
    <string name="approach">Approach</string>
    <string name="city_and_street">City and street</string>
    <string name="address">Address</string>
    <string name="number_of_beds">Number of beds</string>
    <string name="add_photos">Add Photos</string>
    <string name="remember_the_first_photo_is_the_first_thing">Remember, the first photo is the first thing your\nguests will see when looking for accommodation.\nAcceptable formats: JPG, JPEG, PNG</string>
    <string name="continue_string">Continue</string>
    <string name="manage_image">Manage Image</string>
    <string name="attention">Attention!</string>
    <string name="upload_a_minimum_of_3_photos_of_your_facility">"Upload a minimum of 3 photos of your facility "</string>
    <string name="maximum_residents">Maximum residents</string>
</resources>