<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/location_label"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/location_label"
        android:src="@drawable/location_label" />

    <TextView
        android:id="@+id/city_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:fontFamily="@font/sfprotext_regular"
        android:text="@string/example_city"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <ImageView
        android:layout_marginEnd="16dp"
        android:id="@+id/selected_city_mark"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/selected_city"
        android:src="@drawable/select_mark" />

</LinearLayout>