<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.signIn.SignInFragment">


    <ImageView
        android:id="@+id/logo_view"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="@+id/logo_view"
        app:layout_constraintTop_toBottomOf="@+id/logo_view" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sign_in_text"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_text">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/background_input"
            android:fontFamily="@font/sfprotext_regular"
            android:hint="@string/name"
            android:paddingStart="16dp"
            android:textColor="@color/placeholder"
            android:textColorHint="@color/placeholder"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_input"
            android:fontFamily="@font/sfprotext_regular"
            android:hint="@string/email"
            android:paddingStart="16dp"
            android:textColor="@color/placeholder"
            android:textColorHint="@color/placeholder"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_input"
            android:fontFamily="@font/sfprotext_regular"
            android:hint="@string/password"
            android:paddingStart="16dp"
            android:textColor="@color/placeholder"
            android:textColorHint="@color/placeholder"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_input"
            android:fontFamily="@font/sfprotext_regular"
            android:hint="@string/confirm_password"
            android:paddingStart="16dp"
            android:textColor="@color/placeholder"
            android:textColorHint="@color/placeholder"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/sign_up_button"
        android:contentDescription="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />


    <LinearLayout
        android:id="@+id/other_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit">

        <ImageButton
            android:id="@+id/via_google"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/logo_google"
            android:contentDescription="@string/enter_via_google"
            app:layout_constraintTop_toBottomOf="@+id/submit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/via_x"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:layout_marginStart="8dp"
            android:background="@drawable/logo_twitter"
            android:contentDescription="@string/enter_via_x"
            app:layout_constraintTop_toBottomOf="@+id/submit" />

    </LinearLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/confirm_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/check_box"
        android:checked="false"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sfprotext_regular"
        android:text="@string/i_read_and_agree_to_terms_and_conditions"
        android:textColor="@color/grey_1"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/confirm_check_box"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sfprotext_regular"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@color/placeholder"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_enter" />
</androidx.constraintlayout.widget.ConstraintLayout>